parsers/python/BSParser.py
# Generated from /Users/lucyann/Documents/code/BioScriptGrammar/grammar/BSParser.g4 by ANTLR 4.9.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO

# parser/listener/visitor header section



class BSParser ( Parser ):

    grammarFileName = "BSParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'if'", "'else'", "'repeat'", "'while'", 
                     "'function'", "'return'", "'manifest'", "'module'", 
                     "'stationary'", "'functions'", "'instructions'", "'detect'", 
                     "'mix'", "'split'", "'heat'", "'drain'", "'dispense'", 
                     "'dispose'", "'gradient'", "'store'", "'range'", "'capture'", 
                     "'resuspend'", "'wash'", "'at'", "'with'", "'for'", 
                     "'into'", "'times'", "'on'", "'of'", "'units'", "'usein'", 
                     "'start <='", "'start'", "'start >='", "'finish <='", 
                     "'finish'", "'finish >='", "'nat'", "'real'", "'mat'", 
                     "'bool'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'('", "')'", "'{'", "'}'", "'['", "']'", "';'", "','", 
                     "'.'", "'='", "'>'", "'<'", "'!'", "'~'", "'?'", "':'", 
                     "'=='", "'<='", "'>='", "'!='", "'&&'", "'||'", "'++'", 
                     "'--'", "'+'", "'-'", "'*'", "'/'", "'&'", "'|'", "'^'", 
                     "'%'", "'_'", "'@'", "'ns'", "'us'", "'ms'", "'cs'", 
                     "'ds'", "'s'", "'m'", "'h'", "'d'", "'w'", "'mo'", 
                     "'y'", "'nL'", "'uL'", "'mL'", "'cL'", "'dL'", "'L'", 
                     "'daL'", "'c'", "'f'", "'k'", "'1'", "'2'", "'3'", 
                     "'4'", "'5'", "'6'", "'7'", "'8'", "'9'", "'10'", "'11'", 
                     "'12'", "'13'", "'14'", "'15'", "'16'", "'17'", "'18'", 
                     "'19'", "'20'", "'21'", "'22'", "'23'", "'24'", "'25'", 
                     "'26'", "'27'", "'28'", "'29'", "'30'", "'31'", "'32'", 
                     "'33'", "'34'", "'35'", "'37'", "'38'", "'39'", "'40'", 
                     "'42'", "'44'", "'45'", "'46'", "'47'", "'48'", "'49'", 
                     "'50'", "'51'", "'55'", "'58'", "'59'", "'60'", "'61'", 
                     "'62'", "'63'", "'64'", "'65'", "'66'", "'68'", "'69'", 
                     "'70'", "'71'", "'72'", "'73'", "'74'", "'75'", "'76'", 
                     "'98'", "'99'", "'100'", "'134'", "'-1'" ]

    symbolicNames = [ "<INVALID>", "IF", "ELSE", "REPEAT", "WHILE", "FUNCTION", 
                      "RETURN", "MANIFEST", "MODULE", "STATIONARY", "FUNCTIONS", 
                      "INSTRUCTIONS", "DETECT", "MIX", "SPLIT", "HEAT", 
                      "DRAIN", "DISPENSE", "DISPOSE", "GRADIENT", "STORE", 
                      "RANGE", "CAPTURE", "RESUSPEND", "WASH", "AT", "WITH", 
                      "FOR", "INTO", "TIMES", "ON", "OF", "UNITS", "USEIN", 
                      "SLE", "SEQ", "SGE", "FLE", "FEQ", "FGE", "NAT", "REAL", 
                      "MAT", "BOOL", "IDENTIFIER", "STRING_LITERAL", "BOOL_LITERAL", 
                      "FLOAT_LITERAL", "INTEGER_LITERAL", "TIME_NUMBER", 
                      "VOLUME_NUMBER", "TEMP_NUMBER", "LPAREN", "RPAREN", 
                      "LBRACE", "RBRACE", "LBRACKET", "RBRACKET", "SEMICOLON", 
                      "COMMA", "DOT", "ASSIGN", "GT", "LT", "BANG", "TILDE", 
                      "QUESTION", "COLON", "EQUALITY", "LTE", "GTE", "NOTEQUAL", 
                      "AND", "OR", "INC", "DEC", "ADDITION", "SUBTRACT", 
                      "MULTIPLY", "DIVIDE", "BITAND", "BITOR", "CARET", 
                      "MOD", "UNDERSCORE", "ATSIGN", "NANOSECOND", "MICROSECOND", 
                      "MILLISECOND", "CENTISECOND", "DECISECOND", "SECOND", 
                      "MINUTE", "HOUR", "DAY", "WEEK", "MONTH", "YEAR", 
                      "NANOLITRE", "MICROLITRE", "MILLILITRE", "CENTILITRE", 
                      "DECILITRE", "LITRE", "DECALITRE", "CELSIUS", "FAHRENHEIT", 
                      "KELVIN", "ACIDS_STRONG_NON_OXIDIZING", "ACIDS_STRONG_OXIDIZING", 
                      "ACIDS_CARBOXYLIC", "ALCOHOLS_AND_POLYOLS", "ALDEHYDES", 
                      "AMIDES_AND_IMIDES", "AMINES_PHOSPHINES_AND_PYRIDINES", 
                      "AZO_DIAZO_AZIDO_HYDRAZINE_AND_AZIDE_COMPOUNDS", "CARBAMATES", 
                      "BASES_STRONG", "CYANIDES_INORGANIC", "THIOCARBAMATE_ESTERS_AND_SALTS_DITHIOCARBAMATE_ESTERS_AND_SALTS", 
                      "ESTERS_SULFATE_ESTERS_PHOSPHATE_ESTERS_THIOPHOSPHATE_ESTERS_AND_BORATE_ESTERS", 
                      "ETHERS", "FLUORIDES_INORGANIC", "HYDROCARBONS_AROMATIC", 
                      "HALOGENATED_ORGANIC_COMPOUNDS", "ISOCYANATES_AND_ISOTHIOCYANATES", 
                      "KETONES", "SULFIDES_ORGANIC", "METALS_ALKALI_VERY_ACTIVE", 
                      "METALS_ELEMENTAL_AND_POWDER_ACTIVE", "METALS_LESS_REACTIVE", 
                      "METALS_AND_METAL_COMPOUNDS_TOXIC", "DIAZONIUM_SALTS", 
                      "NITRILES", "NITRO_NITROSO_NITRATE_AND_NITRITE_COMPOUNDS_ORGANIC", 
                      "HYDROCARBONS_ALIPHATIC_UNSATURATED", "HYDROCARBONS_ALIPHATIC_SATURATED", 
                      "PEROXIDES_ORGANIC", "PHENOLS_AND_CRESOLS", "SULFONATES_PHOSPHONATES_AND_THIOPHOSPHONATES_ORGANIC", 
                      "SULFIDES_INORGANIC", "EPOXIDES", "METAL_HYDRIDES_METAL_ALKYLS_METAL_ARYLS_AND_SILANES", 
                      "ANHYDRIDES", "SALTS_ACIDIC", "SALTS_BASIC", "ACYL_HALIDES_SULFONYL_HALIDES_AND_CHLOROFORMATES", 
                      "ORGANOMETALLICS", "OXIDIZING_AGENTS_STRONG", "REDUCING_AGENTS_STRONG", 
                      "NON_REDOX_ACTIVE_INORGANIC_COMPOUNDS", "FLUORINATED_ORGANIC_COMPOUNDS", 
                      "FLUORIDE_SALTS_SOLUBLE", "OXIDIZING_AGENTS_WEAK", 
                      "REDUCING_AGENTS_WEAK", "NITRIDES_PHOSPHIDES_CARBIDES_AND_SILICIDES", 
                      "CHLOROSILANES", "SILOXANES", "HALOGENATING_AGENTS", 
                      "ACIDS_WEAK", "BASES_WEAK", "CARBONATE_SALTS", "ALKYNES_WITH_ACETYLENIC_HYDROGEN", 
                      "ALKYNES_WITH_NO_ACETYLENIC_HYDROGEN", "CONJUGATED_DIENES", 
                      "ARYL_HALIDES", "AMINES_AROMATIC", "NITRATE_AND_NITRITE_COMPOUNDS_INORGANIC", 
                      "ACETALS_KETALS_HEMIACETALS_AND_HEMIKETALS", "ACRYLATES_AND_ACRYLIC_ACIDS", 
                      "PHENOLIC_SALTS", "QUATERNARY_AMMONIUM_AND_PHOSPHONIUM_SALTS", 
                      "SULFITE_AND_THIOSULFATE_SALTS", "OXIMES", "POLYMERIZABLE_COMPOUNDS", 
                      "NOT_CHEMICALLY_REACTIVE", "INSUFFICIENT_INFORMATION_FOR_CLASSIFICATION", 
                      "WATER_AND_AQUEOUS_SOLUTIONS", "NULL", "UNKNOWN", 
                      "WS", "COMMENT", "LINE_COMMENT" ]

    RULE_program = 0
    RULE_globalDeclarations = 1
    RULE_moduleDeclaration = 2
    RULE_manifestDeclaration = 3
    RULE_stationaryDeclaration = 4
    RULE_functions = 5
    RULE_functionDeclaration = 6
    RULE_formalParameters = 7
    RULE_formalParameterList = 8
    RULE_formalParameter = 9
    RULE_functionTyping = 10
    RULE_returnStatement = 11
    RULE_blockStatement = 12
    RULE_statements = 13
    RULE_ifStatement = 14
    RULE_whileStatement = 15
    RULE_repeat = 16
    RULE_heat = 17
    RULE_dispose = 18
    RULE_mix = 19
    RULE_usein = 20
    RULE_useinType = 21
    RULE_capture = 22
    RULE_resuspend = 23
    RULE_wash = 24
    RULE_detect = 25
    RULE_split = 26
    RULE_dispense = 27
    RULE_gradient = 28
    RULE_store = 29
    RULE_numberAssignment = 30
    RULE_math = 31
    RULE_binops = 32
    RULE_parExpression = 33
    RULE_methodInvocation = 34
    RULE_methodCall = 35
    RULE_expressionList = 36
    RULE_typeType = 37
    RULE_unionType = 38
    RULE_typesList = 39
    RULE_variableDefinition = 40
    RULE_variable = 41
    RULE_primary = 42
    RULE_literal = 43
    RULE_primitiveType = 44
    RULE_chemicalType = 45
    RULE_timeIdentifier = 46
    RULE_temperatureIdentifier = 47
    RULE_unitTracker = 48

    ruleNames =  [ "program", "globalDeclarations", "moduleDeclaration", 
                   "manifestDeclaration", "stationaryDeclaration", "functions", 
                   "functionDeclaration", "formalParameters", "formalParameterList", 
                   "formalParameter", "functionTyping", "returnStatement", 
                   "blockStatement", "statements", "ifStatement", "whileStatement", 
                   "repeat", "heat", "dispose", "mix", "usein", "useinType", 
                   "capture", "resuspend", "wash", "detect", "split", "dispense", 
                   "gradient", "store", "numberAssignment", "math", "binops", 
                   "parExpression", "methodInvocation", "methodCall", "expressionList", 
                   "typeType", "unionType", "typesList", "variableDefinition", 
                   "variable", "primary", "literal", "primitiveType", "chemicalType", 
                   "timeIdentifier", "temperatureIdentifier", "unitTracker" ]

    EOF = Token.EOF
    IF=1
    ELSE=2
    REPEAT=3
    WHILE=4
    FUNCTION=5
    RETURN=6
    MANIFEST=7
    MODULE=8
    STATIONARY=9
    FUNCTIONS=10
    INSTRUCTIONS=11
    DETECT=12
    MIX=13
    SPLIT=14
    HEAT=15
    DRAIN=16
    DISPENSE=17
    DISPOSE=18
    GRADIENT=19
    STORE=20
    RANGE=21
    CAPTURE=22
    RESUSPEND=23
    WASH=24
    AT=25
    WITH=26
    FOR=27
    INTO=28
    TIMES=29
    ON=30
    OF=31
    UNITS=32
    USEIN=33
    SLE=34
    SEQ=35
    SGE=36
    FLE=37
    FEQ=38
    FGE=39
    NAT=40
    REAL=41
    MAT=42
    BOOL=43
    IDENTIFIER=44
    STRING_LITERAL=45
    BOOL_LITERAL=46
    FLOAT_LITERAL=47
    INTEGER_LITERAL=48
    TIME_NUMBER=49
    VOLUME_NUMBER=50
    TEMP_NUMBER=51
    LPAREN=52
    RPAREN=53
    LBRACE=54
    RBRACE=55
    LBRACKET=56
    RBRACKET=57
    SEMICOLON=58
    COMMA=59
    DOT=60
    ASSIGN=61
    GT=62
    LT=63
    BANG=64
    TILDE=65
    QUESTION=66
    COLON=67
    EQUALITY=68
    LTE=69
    GTE=70
    NOTEQUAL=71
    AND=72
    OR=73
    INC=74
    DEC=75
    ADDITION=76
    SUBTRACT=77
    MULTIPLY=78
    DIVIDE=79
    BITAND=80
    BITOR=81
    CARET=82
    MOD=83
    UNDERSCORE=84
    ATSIGN=85
    NANOSECOND=86
    MICROSECOND=87
    MILLISECOND=88
    CENTISECOND=89
    DECISECOND=90
    SECOND=91
    MINUTE=92
    HOUR=93
    DAY=94
    WEEK=95
    MONTH=96
    YEAR=97
    NANOLITRE=98
    MICROLITRE=99
    MILLILITRE=100
    CENTILITRE=101
    DECILITRE=102
    LITRE=103
    DECALITRE=104
    CELSIUS=105
    FAHRENHEIT=106
    KELVIN=107
    ACIDS_STRONG_NON_OXIDIZING=108
    ACIDS_STRONG_OXIDIZING=109
    ACIDS_CARBOXYLIC=110
    ALCOHOLS_AND_POLYOLS=111
    ALDEHYDES=112
    AMIDES_AND_IMIDES=113
    AMINES_PHOSPHINES_AND_PYRIDINES=114
    AZO_DIAZO_AZIDO_HYDRAZINE_AND_AZIDE_COMPOUNDS=115
    CARBAMATES=116
    BASES_STRONG=117
    CYANIDES_INORGANIC=118
    THIOCARBAMATE_ESTERS_AND_SALTS_DITHIOCARBAMATE_ESTERS_AND_SALTS=119
    ESTERS_SULFATE_ESTERS_PHOSPHATE_ESTERS_THIOPHOSPHATE_ESTERS_AND_BORATE_ESTERS=120
    ETHERS=121
    FLUORIDES_INORGANIC=122
    HYDROCARBONS_AROMATIC=123
    HALOGENATED_ORGANIC_COMPOUNDS=124
    ISOCYANATES_AND_ISOTHIOCYANATES=125
    KETONES=126
    SULFIDES_ORGANIC=127
    METALS_ALKALI_VERY_ACTIVE=128
    METALS_ELEMENTAL_AND_POWDER_ACTIVE=129
    METALS_LESS_REACTIVE=130
    METALS_AND_METAL_COMPOUNDS_TOXIC=131
    DIAZONIUM_SALTS=132
    NITRILES=133
    NITRO_NITROSO_NITRATE_AND_NITRITE_COMPOUNDS_ORGANIC=134
    HYDROCARBONS_ALIPHATIC_UNSATURATED=135
    HYDROCARBONS_ALIPHATIC_SATURATED=136
    PEROXIDES_ORGANIC=137
    PHENOLS_AND_CRESOLS=138
    SULFONATES_PHOSPHONATES_AND_THIOPHOSPHONATES_ORGANIC=139
    SULFIDES_INORGANIC=140
    EPOXIDES=141
    METAL_HYDRIDES_METAL_ALKYLS_METAL_ARYLS_AND_SILANES=142
    ANHYDRIDES=143
    SALTS_ACIDIC=144
    SALTS_BASIC=145
    ACYL_HALIDES_SULFONYL_HALIDES_AND_CHLOROFORMATES=146
    ORGANOMETALLICS=147
    OXIDIZING_AGENTS_STRONG=148
    REDUCING_AGENTS_STRONG=149
    NON_REDOX_ACTIVE_INORGANIC_COMPOUNDS=150
    FLUORINATED_ORGANIC_COMPOUNDS=151
    FLUORIDE_SALTS_SOLUBLE=152
    OXIDIZING_AGENTS_WEAK=153
    REDUCING_AGENTS_WEAK=154
    NITRIDES_PHOSPHIDES_CARBIDES_AND_SILICIDES=155
    CHLOROSILANES=156
    SILOXANES=157
    HALOGENATING_AGENTS=158
    ACIDS_WEAK=159
    BASES_WEAK=160
    CARBONATE_SALTS=161
    ALKYNES_WITH_ACETYLENIC_HYDROGEN=162
    ALKYNES_WITH_NO_ACETYLENIC_HYDROGEN=163
    CONJUGATED_DIENES=164
    ARYL_HALIDES=165
    AMINES_AROMATIC=166
    NITRATE_AND_NITRITE_COMPOUNDS_INORGANIC=167
    ACETALS_KETALS_HEMIACETALS_AND_HEMIKETALS=168
    ACRYLATES_AND_ACRYLIC_ACIDS=169
    PHENOLIC_SALTS=170
    QUATERNARY_AMMONIUM_AND_PHOSPHONIUM_SALTS=171
    SULFITE_AND_THIOSULFATE_SALTS=172
    OXIMES=173
    POLYMERIZABLE_COMPOUNDS=174
    NOT_CHEMICALLY_REACTIVE=175
    INSUFFICIENT_INFORMATION_FOR_CLASSIFICATION=176
    WATER_AND_AQUEOUS_SOLUTIONS=177
    NULL=178
    UNKNOWN=179
    WS=180
    COMMENT=181
    LINE_COMMENT=182

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INSTRUCTIONS(self):
            return self.getToken(BSParser.INSTRUCTIONS, 0)

        def COLON(self):
            return self.getToken(BSParser.COLON, 0)

        def EOF(self):
            return self.getToken(BSParser.EOF, 0)

        def globalDeclarations(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BSParser.GlobalDeclarationsContext)
            else:
                return self.getTypedRuleContext(BSParser.GlobalDeclarationsContext,i)


        def functions(self):
            return self.getTypedRuleContext(BSParser.FunctionsContext,0)


        def statements(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BSParser.StatementsContext)
            else:
                return self.getTypedRuleContext(BSParser.StatementsContext,i)


        def getRuleIndex(self):
            return BSParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = BSParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 98
                self.globalDeclarations()
                self.state = 101 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BSParser.MANIFEST) | (1 << BSParser.MODULE) | (1 << BSParser.STATIONARY) | (1 << BSParser.LBRACKET))) != 0)):
                    break

            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BSParser.FUNCTIONS:
                self.state = 103
                self.functions()


            self.state = 106
            self.match(BSParser.INSTRUCTIONS)
            self.state = 107
            self.match(BSParser.COLON)
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BSParser.IF) | (1 << BSParser.REPEAT) | (1 << BSParser.WHILE) | (1 << BSParser.HEAT) | (1 << BSParser.DRAIN) | (1 << BSParser.DISPOSE) | (1 << BSParser.STORE) | (1 << BSParser.IDENTIFIER) | (1 << BSParser.LBRACKET))) != 0) or _la==BSParser.ATSIGN:
                self.state = 108
                self.statements()
                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 114
            self.match(BSParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GlobalDeclarationsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def moduleDeclaration(self):
            return self.getTypedRuleContext(BSParser.ModuleDeclarationContext,0)


        def manifestDeclaration(self):
            return self.getTypedRuleContext(BSParser.ManifestDeclarationContext,0)


        def stationaryDeclaration(self):
            return self.getTypedRuleContext(BSParser.StationaryDeclarationContext,0)


        def getRuleIndex(self):
            return BSParser.RULE_globalDeclarations

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGlobalDeclarations" ):
                listener.enterGlobalDeclarations(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGlobalDeclarations" ):
                listener.exitGlobalDeclarations(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGlobalDeclarations" ):
                return visitor.visitGlobalDeclarations(self)
            else:
                return visitor.visitChildren(self)




    def globalDeclarations(self):

        localctx = BSParser.GlobalDeclarationsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_globalDeclarations)
        try:
            self.state = 119
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 116
                self.moduleDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 117
                self.manifestDeclaration()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 118
                self.stationaryDeclaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModuleDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MODULE(self):
            return self.getToken(BSParser.MODULE, 0)

        def IDENTIFIER(self):
            return self.getToken(BSParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return BSParser.RULE_moduleDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModuleDeclaration" ):
                listener.enterModuleDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModuleDeclaration" ):
                listener.exitModuleDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModuleDeclaration" ):
                return visitor.visitModuleDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def moduleDeclaration(self):

        localctx = BSParser.ModuleDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_moduleDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(BSParser.MODULE)
            self.state = 122
            self.match(BSParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

